[gd_scene load_steps=27 format=3 uid="uid://xyp0got3c5dp"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/LayoutPanel/LayoutPanel.gd" id="1_o5pl2"]
[ext_resource type="PackedScene" uid="uid://g5yh8tb0v6bk" path="res://scenes/world_objects/Sprinkler/Sprinkler.tscn" id="2_16d6l"]
[ext_resource type="PackedScene" uid="uid://db8wvn8xh27x0" path="res://scenes/world_objects/DistanceMeasurement/DistanceMeasurement.tscn" id="2_rmdn3"]
[ext_resource type="PackedScene" uid="uid://cscoufmvhk6tk" path="res://scenes/world_objects/Pipe/Pipe.tscn" id="3_7watc"]
[ext_resource type="PackedScene" uid="uid://co2gtkorldd8j" path="res://scenes/ui/ProjectEditor/SprinklerPropertyEditor/SprinklerPropertyEditor.tscn" id="3_itpjk"]
[ext_resource type="PackedScene" uid="uid://cmr73cpklqypc" path="res://scenes/world_objects/PolygonNode/PolygonNode.tscn" id="4_85obg"]
[ext_resource type="PackedScene" uid="uid://bujgf1ym2asal" path="res://scenes/ui/ProjectEditor/ImageNodePropertyEditor/ImageNodePropertyEditor.tscn" id="4_legmd"]
[ext_resource type="PackedScene" uid="uid://cn8j4nj6r83we" path="res://scenes/ui/dialogs/ImageImportWizard/ImageImportWizard.tscn" id="5_3cenq"]
[ext_resource type="PackedScene" uid="uid://c7ey0qd3m5ads" path="res://scenes/ui/ProjectEditor/ObjectsList/ObjectsList.tscn" id="5_p3ckg"]
[ext_resource type="PackedScene" uid="uid://ug68ljbldsj5" path="res://scenes/ui/dialogs/GridSpacingDialog/GridSpacingDialog.tscn" id="6_lbneg"]
[ext_resource type="Texture2D" uid="uid://cphnqsvx30p2c" path="res://assets/icons/Remove.svg" id="7_nx6cf"]
[ext_resource type="PackedScene" uid="uid://0w6g4f1p5gwe" path="res://scenes/ui/ProjectEditor/PolygonNodePropertyEditor/PolygonNodePropertyEditor.tscn" id="7_u58qy"]
[ext_resource type="Texture2D" uid="uid://b7dml04prcvb" path="res://assets/icons/Water.svg" id="9_t5ctp"]
[ext_resource type="PackedScene" uid="uid://dqfod1mptbtve" path="res://scenes/ui/ProjectEditor/WorldViewportContainer/WorldViewportContainer.tscn" id="9_xrpqu"]
[ext_resource type="Texture2D" uid="uid://cn15hpoo53btg" path="res://assets/icons/Image.svg" id="10_7tkh4"]
[ext_resource type="Texture2D" uid="uid://cu32v2mhfe8e5" path="res://assets/icons/Ruler.svg" id="11_6kdtp"]
[ext_resource type="PackedScene" uid="uid://eve0n62ubtrx" path="res://scenes/ui/ProjectEditor/PipePropertyEditor/PipePropertyEditor.tscn" id="11_bx27v"]
[ext_resource type="Theme" uid="uid://c42vavmyapxw2" path="res://assets/themes/ToolbarButton.tres" id="11_w0qvw"]
[ext_resource type="Texture2D" uid="uid://bp0qj22qp5ed7" path="res://assets/icons/PolygonTool.svg" id="12_0ook5"]
[ext_resource type="Texture2D" uid="uid://dvsonuppgtdb7" path="res://assets/icons/Lock.svg" id="16_0llxi"]
[ext_resource type="Texture2D" uid="uid://b2np3mm4ejoy6" path="res://assets/icons/Unlock.svg" id="17_pwsqd"]
[ext_resource type="Texture2D" uid="uid://c0te0jgsfwqbq" path="res://assets/icons/CurveCreate.svg" id="18_3j2nk"]
[ext_resource type="ButtonGroup" uid="uid://b664mtqybvxmi" path="res://scenes/ui/ProjectEditor/LayoutPanel/CurveEditButtonGroup.tres" id="18_emdii"]
[ext_resource type="Texture2D" uid="uid://cgi7x2mrycjj0" path="res://assets/icons/CurveEdit.svg" id="20_pfhm2"]
[ext_resource type="Texture2D" uid="uid://gbukq6uonk0u" path="res://assets/icons/CurveDelete.svg" id="21_j3b3p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60egv"]
bg_color = Color(0.105882, 0.113725, 0.12549, 1)

[node name="LayoutPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_60egv")
script = ExtResource("1_o5pl2")
SprinklerScene = ExtResource("2_16d6l")
PipeScene = ExtResource("3_7watc")
DistanceMeasurementScene = ExtResource("2_rmdn3")
PolygonScene = ExtResource("4_85obg")

[node name="PreferenceUpdateTimer" type="Timer" parent="."]
autostart = true

[node name="ToolTipTimer" type="Timer" parent="."]
one_shot = true

[node name="ImgDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(900, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg", "*.png", "*.bmp", "*.jpeg")

[node name="ImageImportWizard" parent="." instance=ExtResource("5_3cenq")]
visible = false

[node name="GridSpacingDialog" parent="." instance=ExtResource("6_lbneg")]
visible = false

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_constants/autohide = 0

[node name="LeftPane" type="TabContainer" parent="HSplitContainer"]
layout_mode = 2
current_tab = 0
tab_focus_mode = 0

[node name="Properties" type="ScrollContainer" parent="HSplitContainer/LeftPane"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="SprinklerPropertiesList" parent="HSplitContainer/LeftPane/Properties" instance=ExtResource("3_itpjk")]
layout_mode = 2

[node name="ImageNodePropertiesList" parent="HSplitContainer/LeftPane/Properties" instance=ExtResource("4_legmd")]
visible = false
layout_mode = 2

[node name="PolygonNodePropertiesList" parent="HSplitContainer/LeftPane/Properties" instance=ExtResource("7_u58qy")]
visible = false
layout_mode = 2

[node name="PipePropertyEditor" parent="HSplitContainer/LeftPane/Properties" instance=ExtResource("11_bx27v")]
visible = false
layout_mode = 2

[node name="Objects" parent="HSplitContainer/LeftPane" instance=ExtResource("5_p3ckg")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Layout" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LayoutToolbar" type="PanelContainer" parent="HSplitContainer/Layout"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="HSplitContainer/Layout/LayoutToolbar"]
layout_mode = 2

[node name="AddSprinkler" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Add sprinkler"
focus_mode = 0
theme = ExtResource("11_w0qvw")
icon = ExtResource("9_t5ctp")
icon_alignment = 1

[node name="AddPipe" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Add pipe"
focus_mode = 0
theme = ExtResource("11_w0qvw")
text = "Pipe"
icon_alignment = 1

[node name="AddImage" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Add image"
focus_mode = 0
theme = ExtResource("11_w0qvw")
icon = ExtResource("10_7tkh4")
icon_alignment = 1

[node name="AddDistMeasure" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Add distance measurement"
focus_mode = 0
theme = ExtResource("11_w0qvw")
icon = ExtResource("11_6kdtp")
icon_alignment = 1

[node name="AddPolygon" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Add polygon shape"
focus_mode = 0
theme = ExtResource("11_w0qvw")
icon = ExtResource("12_0ook5")
icon_alignment = 1

[node name="RemoveButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Remove item(s)."
focus_mode = 0
theme = ExtResource("11_w0qvw")
disabled = true
icon = ExtResource("7_nx6cf")
icon_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
layout_mode = 2

[node name="PositionLockButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Enable position lock on selected object(s)."
focus_mode = 0
theme = ExtResource("11_w0qvw")
disabled = true
icon = ExtResource("16_0llxi")
icon_alignment = 1

[node name="PositionUnlockButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Disable position lock on selected object(s)."
focus_mode = 0
theme = ExtResource("11_w0qvw")
icon = ExtResource("17_pwsqd")
icon_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
layout_mode = 2

[node name="ViewMenuButton" type="MenuButton" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
layout_mode = 2
text = "View"
item_count = 4
popup/item_0/text = "Show Origin"
popup/item_0/checkable = 1
popup/item_0/checked = true
popup/item_1/text = "Object Visibility"
popup/item_1/id = 2
popup/item_2/text = "Pipes"
popup/item_2/id = 4
popup/item_3/text = "Grid"
popup/item_3/id = 3

[node name="ObjectsViewPopupMenu" type="PopupMenu" parent="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton"]
size = Vector2i(173, 116)
item_count = 5
item_0/text = "Sprinklers"
item_0/checkable = 1
item_0/checked = true
item_0/id = 3
item_1/text = "Pipes"
item_1/checkable = 1
item_1/checked = true
item_1/id = 4
item_2/text = "Images"
item_2/checkable = 1
item_2/checked = true
item_2/id = 2
item_3/text = "Measurements"
item_3/checkable = 1
item_3/checked = true
item_3/id = 1
item_4/text = "Polygons"
item_4/checkable = 1
item_4/checked = true
item_4/id = 2

[node name="PipeViewPopupMenu" type="PopupMenu" parent="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton"]
auto_translate_mode = 1
size = Vector2i(173, 116)
item_count = 2
item_0/text = "Show Flow Direction"
item_0/checkable = 1
item_1/text = "Colorize"
item_1/id = 1

[node name="PipeColorizePopupMenu" type="PopupMenu" parent="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton"]
auto_translate_mode = 1
size = Vector2i(173, 116)
item_count = 3
item_0/text = "Normal"
item_0/checkable = 2
item_1/text = "By pressure"
item_1/checkable = 2
item_1/id = 1
item_2/text = "By flow rate"
item_2/checkable = 2
item_2/id = 2

[node name="GridViewPopupMenu" type="PopupMenu" parent="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton"]
size = Vector2i(162, 100)
item_count = 2
item_0/text = "Show"
item_0/checkable = 1
item_1/text = "Spacing ..."
item_1/id = 1

[node name="VSeparator3" type="VSeparator" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
layout_mode = 2

[node name="CurveEditButtons" type="HBoxContainer" parent="HSplitContainer/Layout/LayoutToolbar/HBox"]
visible = false
layout_mode = 2

[node name="CurveCreateButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox/CurveEditButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Create points."
theme = ExtResource("11_w0qvw")
toggle_mode = true
button_group = ExtResource("18_emdii")
icon = ExtResource("18_3j2nk")
icon_alignment = 1

[node name="CurveEditButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox/CurveEditButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Edit points.
Left Click: Move/Add points
Right Click: Remove points"
theme = ExtResource("11_w0qvw")
toggle_mode = true
button_pressed = true
button_group = ExtResource("18_emdii")
icon = ExtResource("20_pfhm2")
icon_alignment = 1

[node name="CurveRemoveButton" type="Button" parent="HSplitContainer/Layout/LayoutToolbar/HBox/CurveEditButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Remove points."
theme = ExtResource("11_w0qvw")
toggle_mode = true
button_group = ExtResource("18_emdii")
icon = ExtResource("21_j3b3p")
icon_alignment = 1

[node name="WorldView" parent="HSplitContainer/Layout" instance=ExtResource("9_xrpqu")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="timeout" from="PreferenceUpdateTimer" to="." method="_on_preference_update_timer_timeout"]
[connection signal="timeout" from="ToolTipTimer" to="." method="_on_tool_tip_timer_timeout"]
[connection signal="file_selected" from="ImgDialog" to="." method="_on_img_dialog_file_selected"]
[connection signal="accepted" from="ImageImportWizard" to="." method="_on_image_import_wizard_accepted"]
[connection signal="apply" from="GridSpacingDialog" to="." method="_on_grid_spacing_dialog_apply"]
[connection signal="cancel" from="GridSpacingDialog" to="." method="_on_grid_spacing_dialog_cancel"]
[connection signal="spacing_changed" from="GridSpacingDialog" to="." method="_on_grid_spacing_dialog_spacing_changed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/AddSprinkler" to="." method="_on_add_sprinkler_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/AddPipe" to="." method="_on_add_pipe_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/AddImage" to="." method="_on_add_image_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/AddDistMeasure" to="." method="_on_add_dist_measure_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/AddPolygon" to="." method="_on_add_polygon_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/PositionLockButton" to="." method="_on_position_lock_button_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/PositionUnlockButton" to="." method="_on_position_unlock_button_pressed"]
[connection signal="id_pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton/ObjectsViewPopupMenu" to="." method="_on_objects_view_popup_menu_id_pressed"]
[connection signal="id_pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton/PipeViewPopupMenu" to="." method="_on_pipe_view_popup_menu_id_pressed"]
[connection signal="id_pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton/PipeColorizePopupMenu" to="." method="_on_pipe_colorize_popup_menu_id_pressed"]
[connection signal="id_pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/ViewMenuButton/GridViewPopupMenu" to="." method="_on_grid_view_popup_menu_id_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/CurveEditButtons/CurveCreateButton" to="." method="_on_curve_create_button_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/CurveEditButtons/CurveEditButton" to="." method="_on_curve_edit_button_pressed"]
[connection signal="pressed" from="HSplitContainer/Layout/LayoutToolbar/HBox/CurveEditButtons/CurveRemoveButton" to="." method="_on_curve_remove_button_pressed"]
[connection signal="gui_input" from="HSplitContainer/Layout/WorldView" to="." method="_on_world_view_gui_input"]
[connection signal="pan_state_changed" from="HSplitContainer/Layout/WorldView" to="." method="_on_viewport_container_pan_state_changed"]
[connection signal="world_object_reordered" from="HSplitContainer/Layout/WorldView" to="." method="_on_world_object_reordered"]
